# ASOBO

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CMake/: Dependencies.cmake  Settings.cmake
Engine/Editor/: CMakeLists.txt
Engine/Editor/Private/: Main.cpp
Engine/Examples/: CMakeLists.txt  Example1.cpp
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/App/: App.h  CMakeLists.txt
Engine/Runtime/App/Private/: Application.cpp  Window.cpp
Engine/Runtime/App/Public/: Application.h  Window.h
Engine/Runtime/Core/: CMakeLists.txt  Core.h
Engine/Runtime/Core/Private/: Application.cpp  Window.cpp
Engine/Runtime/Core/Private/Debugging/: Logger.cpp
Engine/Runtime/Core/Private/IO/: Directory.cpp  File.cpp  Path.cpp
Engine/Runtime/Core/Public/: Application.h  Window.h
Engine/Runtime/Core/Public/Debugging/: LogLevel.h  Logger.h
Engine/Runtime/Core/Public/IO/: Directory.h  File.h  Path.h
Engine/Runtime/Core/Public/Math/: Matrix.h  Vector2D.h  Vector3D.h  Vector4D.h
Engine/Runtime/Core/Public/Misc/: DateTime.h
Engine/Runtime/Private/Core/: Application.cpp
Engine/Runtime/Public/: Amuse.h
Engine/Runtime/Public/Core/: Application.h  Window.h
Engine/Runtime/Public/Core/Math/: Vector2D.h
Engine/Tests/: CMakeLists.txt
Engine/Tests/App/: CMakeLists.txt  PlatformDetection.cpp  Windowing.cpp
Engine/Tests/Core/Math/Vector2D/: Arithmetic.cpp  Assignment.cpp  CMakeLists.txt  Comparison.cpp  Operation.cpp  Print.cpp
Engine/Tests/Test_Vector2D/: CMakeLists.txt  Test_Vector2D.cpp
editor/: CMakeLists.txt
editor/src/: main.c
examples/: CMakeLists.txt  basic_example.c
include/: asobo.h
include/asobo/: core.h  graphics.h
runtime/: CMakeLists.txt
runtime/src/: core.c  graphics.c
tests/: CMakeLists.txt  test_basic.c
